[package]
name = "meditations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
serde = "1.0.145"
serde_derive = "1.0.145"
tokio = { version = "1.21.2", features = ["full"] }
